# src/common/enums/wod-model.enum.ts
@@ -1,0 +1,10 @@
+export enum WodModel {
+  AMRAP = 'AMRAP',
+  FOR_TIME = 'FOR_TIME',
+  EMOM = 'EMOM',
+  TABATA = 'TABATA',
+  RFT = 'RFT',
+  CHIPPER = 'CHIPPER',
+  LADDER = 'LADDER',
+  INTERVALS = 'INTERVALS',
+}
